compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__sourcemaps__sourcemap_assert.snap
---
source: compiler-core/src/javascript/tests/sourcemaps.rs
expression: "\npub fn main() {\n  let x = True\n  assert x\n}\n"
---
----- SOURCE CODE
0 |
1 |pub fn main() {
2 |  let x = True
3 |  assert x
4 |}

----- COMPILED JAVASCRIPT
0 |//# sourceMappingURL=mod.mjs.map
1 |import { makeError } from "../gleam.mjs";
2 |
3 |const FILEPATH = "src/module.gleam";
4 |
5 |export function main() {
6 |  let x = true;
7 |  if (!x) {
8 |    throw makeError(
9 |      "assert",
10 |      FILEPATH,
11 |      "my/mod",
12 |      4,
13 |      "main",
14 |      "Assertion failed.",
15 |      {
16 |        kind: "expression",
17 |        expression: { kind: "expression", value: false, start: 41, end: 42 },
18 |        start: 34,
19 |        end: 42,
20 |        expression_start: 41
21 |      }
22 |    )
23 |  }
24 |  return undefined;
25 |}

----- SOURCE MAP
Mappings Raw:
1:0 -> 5:0
2:2 -> 6:2
2:10 -> 6:10
3:2 -> 7:2
3:9 -> 7:7
3:2 -> 8:4
