compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__sourcemaps__sourcemap_custom_type_definition.snap
---
source: compiler-core/src/javascript/tests/sourcemaps.rs
expression: "\n/// my custom type\npub type Wibble {\n  /// Wibble\n  Wibble\n  /// Wobble\n  Wobble(field: Int)\n  /// Wabble\n  Wabble(Wibble)\n}"
---
----- SOURCE CODE
0 |
1 |/// my custom type
2 |pub type Wibble {
3 |  /// Wibble
4 |  Wibble
5 |  /// Wobble
6 |  Wobble(field: Int)
7 |  /// Wabble
8 |  Wabble(Wibble)
9 |}

----- COMPILED JAVASCRIPT
0 |//# sourceMappingURL=mod.mjs.map
1 |import { CustomType as $CustomType } from "../gleam.mjs";
2 |
3 |/**
4 | * Wibble
5 | */
6 |export class Wibble extends $CustomType {}
7 |export const Wibble$Wibble$const = new Wibble();
8 |export const Wibble$Wibble = () => Wibble$Wibble$const;
9 |export const Wibble$isWibble = (value) => value instanceof Wibble;
10 |
11 |/**
12 | * Wobble
13 | */
14 |export class Wobble extends $CustomType {
15 |  constructor(field) {
16 |    super();
17 |    this.field = field;
18 |  }
19 |}
20 |export const Wibble$Wobble = (field) => new Wobble(field);
21 |export const Wibble$isWobble = (value) => value instanceof Wobble;
22 |export const Wibble$Wobble$field = (value) => value.field;
23 |export const Wibble$Wobble$0 = (value) => value.field;
24 |
25 |/**
26 | * Wabble
27 | */
28 |export class Wabble extends $CustomType {
29 |  constructor($0) {
30 |    super();
31 |    this[0] = $0;
32 |  }
33 |}
34 |export const Wibble$Wabble = ($0) => new Wabble($0);
35 |export const Wibble$isWabble = (value) => value instanceof Wabble;
36 |export const Wibble$Wabble$0 = (value) => value[0];

----- SOURCE MAP
File: my/mod.mjs
Sources: mod.gleam
Mappings:
----- 


⏷
//# sourceMappingURL=mod.mjs.map
import { CustomType as $CustomType } from "../gleam.mjs";


----- 
/// my custom type
pub type Wibble {
  
⏷

----- 
/// Wibble
  
⏷
/**
 * Wibble
 */

----- 
Wibble
  
⏷
export class Wibble extends $CustomType {}
export const Wibble$Wibble$const = new Wibble();
export const Wibble$Wibble = () => Wibble$Wibble$const;
export const Wibble$isWibble = (value) => value instanceof Wibble;


----- 
/// Wobble
  
⏷
/**
 * Wobble
 */

----- 
Wobble(field: Int)
  
⏷
export class Wobble extends $CustomType {
  constructor(field) {
    super();
    this.field = field;
  }
}
export const Wibble$Wobble = (field) => new Wobble(field);
export const Wibble$isWobble = (value) => value instanceof Wobble;
export const Wibble$Wobble$field = (value) => value.field;
export const Wibble$Wobble$0 = (value) => value.field;


----- 
/// Wabble
  
⏷
/**
 * Wabble
 */

----- 
Wabble(Wibble)
}
⏷
export class Wabble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}
export const Wibble$Wabble = ($0) => new Wabble($0);
export const Wibble$isWabble = (value) => value instanceof Wabble;
export const Wibble$Wabble$0 = (value) => value[0];
----- 

⏷


-----
