compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__sourcemaps__sourcemap_function_definition_with_string_with_newline_escaped.snap
---
source: compiler-core/src/javascript/tests/sourcemaps.rs
expression: "\n/// my function\npub fn wibble() {\n  let wibble = \"hello\\nworld\"\n  wibble <> \"!\"\n}"
---
----- SOURCE CODE
0 |
1 |/// my function
2 |pub fn wibble() {
3 |  let wibble = "hello\nworld"
4 |  wibble <> "!"
5 |}

----- COMPILED JAVASCRIPT
0 |//# sourceMappingURL=mod.mjs.map
1 |/**
2 | * my function
3 | */
4 |export function wibble() {
5 |  let wibble$1 = "hello\nworld";
6 |  return wibble$1 + "!";
7 |}

----- SOURCE MAP
Mappings Raw:
2:0 -> 4:0
3:2 -> 5:2
3:15 -> 5:17
4:2 -> 6:2
4:2 -> 6:9
4:12 -> 6:20
