compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__sourcemaps__sourcemap_module_constant.snap
---
source: compiler-core/src/javascript/tests/sourcemaps.rs
expression: "\n/// my constant\npub const wibble = 1\n/// wobble\nconst wobble = 2\n/// wabble\npub const wabble = 3"
---
----- SOURCE CODE
0 |
1 |/// my constant
2 |pub const wibble = 1
3 |/// wobble
4 |const wobble = 2
5 |/// wabble
6 |pub const wabble = 3

----- COMPILED JAVASCRIPT
0 |//# sourceMappingURL=mod.mjs.map
1 |/**
2 | * my constant
3 | */
4 |export const wibble = 1;
5 |
6 |/**
7 | * wabble
8 | */
9 |export const wabble = 3;

----- SOURCE MAP
File: my/mod.mjs
Sources: mod.gleam
Mappings:
----- 


⏷
//# sourceMappingURL=mod.mjs.map

----- 
/// my constant

⏷
/**
 * my constant
 */

----- 
pub const wibble = 1
⏷
export const wibble = 1;
----- 

/// wobble
const wobble = 2

⏷



----- 
/// wabble

⏷
/**
 * wabble
 */

----- 
pub const wabble = 3
⏷
export const wabble = 3;
----- 

⏷


-----
